@@ -140,16 +140,17 @@ if(isset($_GET['search']))
 	$SMARTY->assign('page',$page);
 	$SMARTY->assign('start',$start);
 
-	if(isset($_GET['print']))
-	{
+	if (isset($_GET['print']))
 		$SMARTY->display('printcustomerlist.html');
-	}
-	elseif($listdata['total'] == 1)
-	{
-		$SESSION->redirect('?m=customerinfo&id='.$customerlist[0]['id']);
-	}
-	else
-	{
+	elseif (isset($_GET['export'])) {
+		$filename = 'customers-' . date('YmdHis') . '.csv';
+		header('Content-Type: text/plain');
+		header('Content-Disposition: attachment; filename=' . $filename);
+		header('Pragma: public');
+		$SMARTY->display('printcustomerlist-csv.html');
+	} elseif ($listdata['total'] == 1)
+		$SESSION->redirect('?m=customerinfo&id=' . $customerlist[0]['id']);
+	else {
 		$SMARTY->assign('customergroups', $LMS->CustomergroupGetAll());
 		$SMARTY->display('customersearchresults.html');
 	}
