@@ -4,15 +4,19 @@
 {include file="calendar_js.html"}
 <SCRIPT type="text/javascript">
 <!-- 
-	function PrintList()
-	{
+	function PrintList() {
 		document.customersearch.action = "?m=customersearch&search=1&print=1";
 		document.customersearch.target = "_BLANK";
 		document.customersearch.submit();
 	}
 
-	function Search()
-	{
+	function ExportCSV() {
+		document.customersearch.action = "?m=customersearch&search=1&export=1";
+		document.customersearch.target = "_BLANK";
+		document.customersearch.submit();
+	}
+
+	function Search() {
 		document.customersearch.action = "?m=customersearch&search=1";
 		document.customersearch.target = "";
 		document.customersearch.submit();
@@ -316,6 +320,7 @@
 	<TR>
 		<TD style="width: 100%;" class="text-right" colspan="2">
 			<A accesskey="S" href="javascript:Search();">{trans("Search")} <IMG src="img/search.gif" alt=""></A>&nbsp;
+			<A href="javascript:ExportCSV();">{trans("Download (CSV)")} <IMG src="img/save.gif" alt=""></A>&nbsp;
 			<A href="javascript:PrintList();">{trans("Print")} <IMG src="img/print.gif" alt=""></A>
 		</TD>
 	</TR>
